--- a/kelompok2.html
+++ b/kelompok2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="png" href="kel2pengweb/favicon.jpg">
+	<link rel="icon" type="jpg" href="kel2pengweb/favicon.jpg">
 	<title>Kelompok 2</title>
 </head>
 <body style="background-color:white;">
@@ -60,7 +60,7 @@
 <p> 1. <i><b>Infinity Mirrored Room - Brilliance of the Souls</i></p></b>
 
 <video style="float: right; margin-left: 10px;margin-right: 1px;" width="250" height="300" controls>
-	<source src="/tugaskelompok/images/video1.mp4" type="video/mp4">
+	<source src="/kel2pengweb/video1.mp4" type="video/mp4">
 </video>
 
 <img src="\kel2pengweb\gambar3.jpg" style="float: left; margin-left: 1px;margin-right: 10px;" width="300" height="200">
