--- a/kelompok2.html
+++ b/kelompok2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="jpg" href="kel2pengweb/favicon.jpg">
+	<link rel="icon" type="jpg" href="/kel2pengweb/favicon.jpg">
 	<title>Kelompok 2</title>
 </head>
 <body style="background-color:white;">
