--- a/kelompok2.html
+++ b/kelompok2.html
@@ -312,8 +312,7 @@ tr:hover {background-color: grey;}
 <div style="background-color:#f6ccc3;color:black;padding:20px; text-align: center;">
   <h2>Museum MACAN (<i>Modern and Contemporary Art in</i> Nusantara)</h2>
   <p>AKR Tower Level M, Jl. Panjang No.5, Kb. Jeruk, Kec. Kb. Jeruk, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11530.</p>
-  <P><a href="https://www.museummacan.org/">website museum MACAN</a></p>
- 	<p><a href="https://maps.app.goo.gl/AtYqduGYEa9NWgbBA?g_st=com.google.maps.preview.copy">lokasi museum MACAN</a></p>
+<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.549079752779!2d106.76541087369957!3d-6.191038060652948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f71dafebfd57%3A0xf19623593db3f0f6!2sMuseum%20Macan%20(Modern%20and%20Contemporary%20Art%20in%20Nusantara)!5e0!3m2!1sid!2sid!4v1729225284415!5m2!1sid!2sid" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 </div>
 <p><cite>Terima kasih, semoga bahagia selalu! 
 <br>-dibuat oleh kelompok 2 pengembangan web: lita, mita, aurel, keyla, kayla maesa <3-</cite></p>
